[project]
name = "xai-tasks"
version = "0.1.0"
description = "A SQLite-based task management component library for AI agents to track, update and manage their tasks."
authors = [{ name = "XpressAI", email = "support@xpress.ai" }]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/XpressAI/xai-tasks"
keywords = ["xircuits", "agents"]

# Xircuits-specific configurations
[tool.xircuits]
#default_example_path = "example.xircuits"
requirements_path = "requirements.txt"
